# tau

./: .gitignore  README.md
zeta/: CHANGELOG.md  README.md  hie.yaml  zeta.cabal
zeta/app/: Main.hs
zeta/data/: simpletext
zeta/data.backup/metadata/: README.md  all  index.csv  index.py  index.tsv  urls
zeta/data/categorized/1000/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
zeta/data/categorized/1001/: 0.txt
zeta/data/categorized/1003/: 0.txt  1.txt
zeta/data/categorized/1009/: 0.txt
zeta/data/categorized/1014/: 0.txt
zeta/data/categorized/1019/: 0.txt
zeta/data/categorized/1024/: 0.txt  1.txt
zeta/data/categorized/1026/: 0.txt  1.txt
zeta/data/categorized/1047/: 0.txt
zeta/data/categorized/1049/: 0.txt  1.txt
zeta/data/categorized/1066/: 0.txt
zeta/data/categorized/1080/: 0.txt
zeta/data/categorized/1089/: 0.txt
zeta/data/categorized/1117/: 0.txt
zeta/data/categorized/1129/: 0.txt
zeta/data/categorized/1170/: 0.txt
zeta/data/categorized/1185/: 0.txt
zeta/data/categorized/1200/: 0.txt  1.txt
zeta/data/categorized/1202/: 0.txt  1.txt
zeta/data/categorized/1205/: 0.txt
zeta/data/categorized/1210/: 0.txt
zeta/data/categorized/1236/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+14 more)
zeta/data/categorized/1237/: 0.txt
zeta/data/categorized/1240/: 0.txt
zeta/data/categorized/1297/: 0.txt
zeta/data/categorized/1350/: 0.txt
zeta/data/categorized/1355/: 0.txt
zeta/data/categorized/1440/: 0.txt
zeta/data/categorized/1450/: 0.txt  1.txt
zeta/data/categorized/1455/: 0.txt  1.txt
zeta/data/categorized/1488/: 0.txt
zeta/data/categorized/1493/: 0.txt
zeta/data/categorized/1500/: 0.txt
zeta/data/categorized/1506/: 0.txt
zeta/data/categorized/1542/: 0.txt
zeta/data/categorized/1569/: 0.txt
zeta/data/categorized/1600/: 0.txt  1.txt  2.txt  3.txt  4.txt
zeta/data/log/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+1960 more)
zeta/data/metadata/: .total  analytics.ipynb  counts.csv  index.py  index.tsv  stopwords.txt  total  urls
zeta/project/: ldavis_prepared_10  ldavis_prepared_10.html  ldavis_prepared_5  ldavis_prepared_5.html  project.ipynb  requirements.txt
zeta/project/checkpoints/: checkpoint  checkpoint_1.index  checkpoint_10.index  checkpoint_2.index  checkpoint_3.index  checkpoint_4.index  checkpoint_5.index  checkpoint_6.index  checkpoint_7.index  checkpoint_8.index  checkpoint_9.index
zeta/src/: Main.hs  MyData.hs
zeta/src/MyData/: Parser.hs  Trie.hs  dump  dump2  test.py
zeta/test/: test  test.c
(+4919 files in other folders)
