cabal-version:      3.6
name:               zeta
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Zeta bc we love the Greek alphabet.

-- A longer description of the package.
-- description: A functional HTML parser /// scraper /// etc.

-- A URL where users can report bugs.
-- bug-reports: Just email me lmao

-- The license under which the package is released.
-- license: MIT
author:             siavava
maintainer:         amittaijoel@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library MyData
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.8,
    bytestring >= 0.11.1,
    text >= 1.2.1,
    HTTP,
    hxt,
    http-conduit >= 2.3.8,
    tagsoup >= 0.14.8,
    utf8-string >= 1.0.2
  other-modules: MyData.Trie, MyData.Parser

executable zeta
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    
    -- base >=4.14.3.0,
    base >= 4.12.0,
    bytestring >= 0.11.1,
    HTTP,
    hxt,
    http-conduit >= 2.3.8,
    tagsoup >= 0.14.8,
    utf8-string >= 1.0.2

  other-modules:    MyData, MyData.Parser, MyData.Trie
  hs-source-dirs:   app, src
  default-language: Haskell2010
